ft module multiple datasource

--- a/futu-service/pom.xml
+++ b/futu-service/pom.xml
@@ -54,6 +54,24 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <!-- SLF4J API -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.32</version> <!-- 使用最新的版本 -->
+        </dependency>
+        <!-- Logback Classic 实现 -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version> <!-- 使用最新的版本 -->
+        </dependency>
+        <dependency>
+            <groupId>com.clickhouse</groupId>
+            <artifactId>clickhouse-jdbc</artifactId>
+            <version>0.8.2</version>
+            <classifier>shaded-all</classifier>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.futunn.openapi/futu-api -->
         <dependency>
             <groupId>com.futunn.openapi</groupId>
