--- a/flink-rt-service/src/main/resources/base_config.properties
+++ b/flink-rt-service/src/main/resources/base_config.properties
@@ -2,11 +2,11 @@
 pg.driverName=org.postgresql.Driver
 pg.username=postgres
 pg.pwd=123456
-pg.url=jdbc:postgresql://localhost:5432/quantx_3rd_futu
+pg.url=jdbc:postgresql://172.21.195.165:5432/quantx_3rd_futu
 #ck≈‰÷√
 ck.driverName=com.clickhouse.jdbc.ClickHouseDriver
 ck.username=default
 ck.pwd=123456
-ck.url=jdbc:ch://172.18.118.97:8123/quantx
+ck.url=jdbc:ch://172.21.195.165:8123/quantx
 #kafka
-kafka.bootstrapServers=172.18.118.97:9092
+kafka.bootstrapServers=172.21.195.165:9092
