--- a/futu-service/src/main/resources/application-dev.yml
+++ b/futu-service/src/main/resources/application-dev.yml
@@ -14,24 +14,24 @@ spring:
           starttls.enable: true
           ssl.enable: true
   datasource:
-    url: jdbc:postgresql://172.23.231.135:5432/quantx_3rd_futu
+    url: jdbc:postgresql://172.21.195.165:5432/quantx_3rd_futu
     username: postgres
     password: 123456
   liquibase:
     change-log: classpath:db/liquibase-changelog.xml
-#  kafka:
-#    bootstrap-servers: 172.21.90.92:9092
-#    producer:
-#      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-#      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-#      retries: 5
-#    consumer:
-#      max-poll-records: 500
-#      key-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
-#      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+  kafka:
+    bootstrap-servers: 172.21.195.165:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      retries: 5
+    consumer:
+      max-poll-records: 500
+      key-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
 ck:
   driverClass: com.clickhouse.jdbc.ClickHouseDriver
-  url: jdbc:ch://172.23.231.135:8123/quantx
+  url: jdbc:ch://172.21.195.165:8123/quantx
   user: default
   password: 123456
 ft:
