--- a/analyze-service/src/main/resources/application-test.yml
+++ b/analyze-service/src/main/resources/application-test.yml
@@ -1,13 +1,15 @@
 server:
   port: 9091
+  servlet:
+    context-path: /
 ck:
   driverClass: com.clickhouse.jdbc.ClickHouseDriver
-  url: jdbc:ch://localhost:8123/quantx
+  url: jdbc:ch://172.21.195.165:8123/quantx
   user: default
   password: 123456
 pg:
   driverClass: org.postgresql.Driver
-  url: jdbc:postgresql://localhost:5432/quantx_offline
+  url: jdbc:postgresql://172.21.195.165:5432/quantx_offline
   user: postgres
   password: 123456
 logging:
